<resources>
    <string name="app_name">P3</string>

    <!--Botones main-->
    <string name="play">Play</string>
    <string name="score">Score</string>
    <string name="settings">Settings</string>

    <!--Botones credits-->
    <string name="credits_txt">Nacho Santonja</string>

    <!--Manifest-->
    <string name="title_activity_credits">Credits</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_score">Score</string>

    <!--Botones play-->
    <string name="answer1">Answer 1</string>
    <string name="answer2">Answer 2</string>
    <string name="answer3">Answer 3</string>
    <string name="answer4">Answer 4</string>

    <!--TextView play-->
    <string name="pay_for">Pay for:</string>
    <string name="question_number">Question:</string>


    <!--Connection Manager-->
    <string name="connection_not_available">The connection is not possible</string>

    <!--Configurations-->
    <string name="category_web_service">Web service</string>
    <string name="preference_http_method">HTTP method</string>
    <string name="preference_http_method_summary">Web requests will be performed using the selected HTTP method</string>

    <!--Play-->
    <string name="next">Next</string>
    <string name="quit">Quit</string>

</resources>
