<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

    <TextView
        android:text="@string/pay_for"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playfor" />

    <TextView
        android:text="TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:id="@+id/euros" />

    <TextView
        android:text="@string/question_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/question_number"
        android:gravity="right" />

        <TextView
            android:text="TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/numberQ"
            android:gravity="right" />
    </LinearLayout>



    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/questionText"
        android:textSize="18sp"
        android:textColor="@color/colorAccent" />

    <Button
        android:text="@string/answer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clickAnswer1"
        android:id="@+id/answer1"
        android:elevation="15dp"
        android:layout_margin="20px" />

    <Button
        android:text="@string/answer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clickAnswer2"
        android:id="@+id/answer2"
        android:paddingBottom="20px"
        android:layout_margin="20px" />

    <Button
        android:text="@string/answer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clickAnswer3"
        android:id="@+id/answer3"
        android:layout_margin="20px" />

    <Button
        android:text="@string/answer4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clickAnswer4"
        android:id="@+id/answer4"
        android:layout_margin="20px" />
</LinearLayout>